[PRMT-1278] Added endpoint to update the status of deduction request when we start processing a large ehr
