# src/swagger.json
@@ -169,6 +169,48 @@
         ]
       }
     },
+    "/deduction-requests/{conversationId}/large-ehr-transfer-started": {
+      "patch": {
+        "tags": [
+          "/deduction-requests/{conversationId}/large-ehr-transfer-started"
+        ],
+        "summary": "Update the status of a deduction request when we start processing a large ehr",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "conversationId",
+            "description": "Conversation Id (must be UUID)",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Deduction Request status successfully updated to large-ehr-transfer-started"
+          },
+          "401": {
+            "description": "Authorization header missing"
+          },
+          "403": {
+            "description": "Authorization key invalid"
+          },
+          "404": {
+            "description": "Conversation ID/Deduction request not found"
+          },
+          "422": {
+            "description": "Validation failed"
+          },
+          "503": {
+            "description": "Error"
+          }
+        },
+        "security": [
+          {
+            "api_key": []
+          }
+        ]
+      }
+    },
     "/deduction-requests/{conversationId}/pds-update": {
       "patch": {
         "tags": [
